# sudoku

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  standalone.py
static/web-components/: clock-tracker.js  error-move-tracker.js  move-tracker.js  stats-item.js
sudoku/: tests.py
sudoku/table_gen/: generate_sudoku.py  table_gen.py  tests.py
sudoku/verifier/: tests.py  verifier.py
templates/: about.html  cell.html  cell2.html  clock.html  errormoves.html  header.html  hero.html  layout.html  moves.html  stats.html  sudoku-page.html  sudoku-table.html  win.html
web_app/: app.py
