[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["Francesco Calò <fcaloisme@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
black = "^24.10.0"
isort = "^5.13.2"
toolz = "^1.0.0"
parameterized = "^0.9.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
